# novel-agent

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  README.md  想法.md
python-ai/: .env.example  AGENTS.md  API.md  README.md  pyproject.toml  requirements.txt
python-ai/app/: __init__.py  config.py  main.py
python-ai/app/agent/: __init__.py  loop.py  metrics.py  router.py  schemas.py  warmup.py
python-ai/app/agent_step/: cc_visibility.py  chapter_body.py  choose_defaults.py  context_compact.py  context_compact_autocompact.py  context_compact_micro.py  context_enrich.py  errors.py  (+38 more)
python-ai/scripts/: cancel_paused_jobs.py  check_milvus.py  debug_ask_user_llm.py  migrate_agent_step.py  migrate_crawl_imports.py  probe_http.py  probe_mihomo_nodes_qishuxia.py  probe_orchestrator.py  probe_qishuxia.py  probe_qishuxia_proxy.py  probe_qishuxia_urls.py  probe_qishuxia_worker.sh  probe_scrapling_impersonate.py  probe_scrapling_tls.py  probe_shuyous.py  probe_shuyous_response.py  probe_stealth_qishuxia.py  probe_zdopen_proxy.py  wake_orchestrator.py
python-ai/tests/: conftest.py  test_agent_refactor_phase0.py  test_agent_step_events.py  test_agent_step_json_stream.py  test_agent_step_schemas.py  test_agent_stream_events.py  test_agent_tools.py  test_billing_cost.py  test_billing_reporter.py  test_catalog_index_namespace.py  test_cc_tool_execution.py  test_cc_visibility.py  test_chapter_body_format.py  test_chapter_catalog.py  test_chapter_catalog_cache.py  test_chapter_index.py  test_chapter_index_milvus.py  test_chapter_memory_read_labels.py  test_chapter_meta.py  test_chapter_position.py  test_chapter_read_stream.py  test_chapter_stream_persist.py  test_chapter_write_progress.py  test_chapter_write_title.py  test_choice_gate.py  test_choose_parser.py  test_chunking.py  test_content_api.py  test_content_filter.py  test_context_compact.py  test_context_compact_autocompact.py  test_context_compact_chapter_patch.py  test_context_compact_micro.py  test_context_memory_log.py  test_context_meter.py  test_context_relevance_inject.py  test_context_search_routing.py  test_context_usage.py  test_cover_prompt.py  test_crawl_agent_registry.py  (+144 more)
(+3594 files in other folders)
